# protocol_wire

./: .gitignore  .gitignore.in  COPYING.txt  MANIFEST.in  README.rst  pyproject.toml
src/protocol_wire/: __init__.py  exceptions.py  registry.py  utils.py
tests/: example_bar.py  example_foo.py  test_configurator.py  test_registry.py  test_utils.py
