[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol_wire"
version = "0.1.dev0"
description = "Protocol Adapter Registry"
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Gouji Ochiai", email = "gjo.ext@gmail.com"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
urls.repository = "https://github.com/gjo/protocol_wire"
dependencies = []

[project.optional-dependencies]
testing = [
  "pytest",
  "pytest-asyncio",
]
develop = [
  "build",
  "check-manifest",
  "coverage",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-randomly",
  "readme-renderer[md]",
  "ruff~=0.5.5",
  "tox",
  "twine",
]

[tool.setuptools]
dynamic = {readme = {file = ["README.rst", "CHANGES.rst"]}}
packages.find = {where = ["src"]}
zip-safe = false

[tool.coverage.paths]
source = ["src/", ".tox/**/site-packages/"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
  "\\.\\.\\.",
  "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.mypy]
show_error_codes = true

[tool.ruff]
line-length = 119
target-version = 'py310'

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint]
extend-select = [
  'F',  # pyflakes
  'E',  # pydocstyle
  'W',  # pydocstyle
  'I',  # isort
  'EM',  # flake8-errmsg
  'G',  # flak8-logging-format
  'LOG',  # flak8-logging
  'RUF100',  # unused noqa
]
extend-ignore = [
  'EM101',  # Exception must not use a string literal
]
preview = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310,311,312,313},coverage,lint,mypy
isolated_build = True

[testenv]
commands = pytest
deps =
  coverage: coverage
  mypy: mypy
extras = testing
install_command = python -m pip install -c constraints.txt {opts} {packages}

[testenv:coverage]
commands =
  coverage erase
  coverage run --source={envsitepackagesdir}/protocol_wire,tests -m pytest
  coverage report

[testenv:lint]
skip_install = true
commands =
  ruff format --check src tests
  ruff check src tests
  check-manifest
  python -c 'import shutil; shutil.rmtree("dist/tox", True)'
  python -m build --wheel --outdir dist/tox
  twine check dist/tox/*.whl
deps =
  build
  check-manifest
  readme_renderer[md]
  ruff
  twine

[testenv:mypy]
commands = mypy --strict --no-incremental src tests

# run explicit
[testenv:codeformat]
skip_install = true
commands =
  ruff format src tests
  ruff check --fix src tests
deps =
  ruff
"""
